crates/uitest/fixtures/ty_check/loop_unroll_attr_duplicate.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/loop_unroll_attr_duplicate.fe
---
error[12-0003]: duplicate `#[unroll]` attribute on for loop
  ┌─ loop_unroll_attr_duplicate.fe:3:5
  │
3 │     #[unroll(never)]
  │     ^^^^^^^^^^^^^^^^ remove the extra `#[unroll]` attribute
